--- a/EmployeeManagement/Properties/launchSettings.json
+++ b/EmployeeManagement/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:38702",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:60082/",
+      "sslPort": 44380
     }
   },
   "profiles": {
@@ -12,7 +12,6 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "MyKey": "Value of MyKey from Environment Variable",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -20,9 +19,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
